--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <title>Welcome to the Musix Genre!</title>
+    <title>Welcome to the Musix WikiFinder</title>
 </head>
 <body>
     <header class="hero">
-        <h1 class="musix">Musix Genre!</h1>
-        <p>Welcome to the Musix Genre. Please search up any genre you wish to find!!</p>
+        <h1 class="musix">Musix WikiFinder!</h1>
+        <p>Welcome to the Musix WikiFinder. Please search up any lyrics, artists, or song titles you wish to find!!</p>
     </header>
     <main>
 
