bulma css update

--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <title>Welcome to the Musix WikiFinder</title>
 </head>
 <body>
-    <header class="hero">
-        <h1 class="musix">Musix WikiFinder!</h1>
-        <p>Welcome to the Musix WikiFinder. Please search up any lyrics, artists, or song titles you wish to find!!</p>
-    </header>
+    <div class="container">
+        <div class="block">
+            <h1 class="title is-3">Musix WikiFinder!</h1>    
+        </div>
+    </div>
+    <div class="block">
+        <p class="content is-large">Welcome to the Musix WikiFinder. Please search up any lyrics, artists, or song titles you wish to find!!</p>
+    </div>
+
+    <div class="block">
+        <button class="button is-dark">Button</button>
+    </div>
+        
     <main>
 
     </main>
