created header section and input field

--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@
 </head>
 <body>
     <header class="hero">
-        <h1 class="musix">Musix WikiFinder!</h1>
-        <p>Welcome to the Musix WikiFinder. Please search up any lyrics, artists, or song titles you wish to find!!</p>
+      <div class="block">
+        <div class="notification is-info">
+            <h1 class="title is-1">Musix WikiFinder</h1>
+            <strong>Welcome to the Musix WikiFinder. Please search up any lyrics, artists, or song titles you wish to find!</strong>
+            <div class="field has-addons">
+                <div class="control">
+                  <input class="input"  type="text" placeholder="Find music here!">
+                </div>
+                <div class="control">
+                  <a class="button is-active">
+                    Search
+                  </a>
+                </div>
+            </div>
+        </div>
+      </div>
     </header>
-    <main>
-
-    </main>
+      <main>
+        
+      </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
