--- a/index.html
+++ b/index.html
@@ -30,4 +30,15 @@
       </main>
     <script src="./assets/js/script.js"></script>
 </body>
+<div class="field has-addons">
+    <div class="control">
+        <div class="notification is-info">
+          <div class="box">
+            <footer class="footer">
+                <h1 class="title is-3">Copyright 2021 Evan, Albert, Kevin, and Gabriel!!</h1>
+            </footer>
+          </div>
+        </div>
+    </div>
+</div>
 </html>
