--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
       </main>
     <script src="./assets/js/script.js"></script>
 </body>
-<div class="field has-addons">
-    <div class="control">
+
+<div class="block">
+    <div class="field has-addons">
+      <div class="control">
         <div class="notification is-info">
           <div class="box">
             <footer class="footer">
@@ -39,6 +41,7 @@
             </footer>
           </div>
         </div>
+      </div>
     </div>
 </div>
 </html>
