--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="/">
     <title>Welcome to the Musix WikiFinder</title>
 </head>
 <body>
     <header class="hero">
       <div class="block">
-        <div class="notification is-info">
+        <div class="notification is-success">
             <h1 class="title is-1">Musix WikiFinder</h1>
             <strong>Welcome to the Musix WikiFinder. Please search up any lyrics, artists, or song titles you wish to find!</strong>
-            <div class="field has-addons">
+              <div class="field has-addons">
                 <div class="control">
                   <form class="search-form js-search-form">
                   <input type="text" placeholder="Find music here!" type="search" class="search-input js-search-input input" autofocus>
-                  <button id="search" class="button is-active">Search</button>
-                    <div class="loading-indicator">
+                  <button id="search" class="button is-black">Search</button>
+                  <div class="loading-indicator">
                       <div class="sk-chase js-spinner hidden"></div>
-                    </div>
+                  </div>
                     <section class="search-results js-search-results"></section>
                 </div>
             </div>
@@ -31,15 +32,20 @@
       </main>
     <script src="./assets/js/script.js"></script>
 </body>
-<div class="field has-addons">
-    <div class="control">
-        <div class="notification is-info">
+
+<footer class="footer">
+  <div class="block">
+    <div class="field has-addons">
+      <div class="control">
+        <div class="notification is-success">
           <div class="box">
-            <footer class="footer">
+            <!--<footer class="footer">-->
                 <h1 class="title is-3">Copyright 2021 Evan, Albert, Kevin, and Gabriel!!</h1>
-            </footer>
+            <!--</footer>-->
           </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
+</footer>
 </html>
