--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <div class="control">
                 <form id="form">
                   <div class="form-group"> 
-                  <input type="text" placeholder="Find music here!" type="search" class="form-control input" id="search" style="width: 50%;">
+                  <input type="text" placeholder="Find music here!" type="search" class="form-control input" id="search" style="width: 50%;" autofocus>
                   </div>
                   <div class="form-group">
                     <input type="submit" class="btn" value="search">
@@ -29,7 +29,7 @@
                 <div class="control">
                   <form class="search-form js-search-form">
                   <input type="text" placeholder="Find music here!" type="search" class="search-input js-search-input input" style="width: 50%;" autofocus>
-                  <button id="search" class="button is-black">Search</button>
+                  <button id="search" class="button is-black">Clear History</button>
                     <div class="loading-indicator">
                     </div>
                   </div>
