--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
     <title>Welcome to the Musix Lyrics</title>
 </head>
 <body>
-    <header class="hero">
+    <header class="hero" style="text-align: center;">
       <div class="block">
-        <div class="notification is-success">
-            <h1 class="title is-1" style="color: black;">Musix Lyrics</h1>
-            <strong style="color: black;">Welcome to the Musix Lyrics! Please search up any lyrics, artists, or song titles you wish to find!</strong>
+        <div class="notification is-success" style="background:url(./images/Musix.jpg) fixed center;">
+            <h1 class="title is-1" style="color: purple">Musix Lyrics</h1>
+            <strong style="color: purple;">Welcome to the Musix Lyrics! Please search up any lyrics, artists, or song titles you wish to find!</strong>
             <div class="field has-addons">
               <div class="control">
                 <form id="form">
-                  <div class="form-group"> 
-                    <input type="text" placeholder="Find music here!" type="search" class="form-control input" id="search" style="width: 70%;">
+                  <div class="form-group" style="text-align: center;"> 
+                    <input type="text" placeholder="Find music here!" type="search" class="form-control input" id="search" style="width: 50%;">
+                    <button class="button is-black">Search</button>
                   </div>
                   <div class="form-group">
                     <div class="level-right">
-                    <button class="button is-black">Search</button>
+                    
                     </div>
                   </div>
                 </form >
@@ -47,7 +48,7 @@
 <footer class="footer" style="padding: 0%;" style="margin-top: 0px;">
   <div class="field has-addons">
     <div class="control" style="width: 100%;">
-        <div class="notification is-success">
+        <div class="notification is-dark">
           <div class="box">
             <div class="content has-text-centered">         
               <h1 class="title is-5" style="color: black;">Copyright 2021 Evan, Albert, Kevin, and Gabriel!!</h1>
