--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" src="./assets/css/style.css">
     <title>Welcome to the Musix Lyrics</title>
 </head>
-<body>
+<body style="background: url(./images/Musix.jpg) fixed center;">
     <header class="hero" style="text-align: center;">
       <div class="block">
         <div class="notification is-success" style="background:url(./images/Musix.jpg) fixed center;">
@@ -35,11 +35,11 @@
                     </div>
                   </div>
                </div>
-             </div>
+              </div>
           </div>
        </div>
     </header>
-      <main>
+      <main style="min-height: 660px;">
         
       </main>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -48,10 +48,10 @@
 <footer class="footer" style="padding: 0%;" style="margin-top: 0px;">
   <div class="field has-addons">
     <div class="control" style="width: 100%;">
-        <div class="notification is-dark">
-          <div class="box">
+        <div class="notification" style="background: url(./images/Musix.jpg) fixed center;">
+          <div class="box" style="background: url(./images/Musix.jpg) fixed center;">
             <div class="content has-text-centered">         
-              <h1 class="title is-5" style="color: black;">Copyright 2021 Evan, Albert, Kevin, and Gabriel!!</h1>
+              <h1 class="title is-4" style="color: purple;">Copyright 2021 Evan, Albert, Kevin, and Gabriel!!</h1>
             </div>
           </div>
         </div>
