--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <div class="control">
                 <form id="form">
                   <div class="form-group" style="text-align: center;"> 
-                    <input type="text" placeholder="Find music here!" type="search" class="form-control input" id="search" style="width: 50%;">
+                    <input type="text" type="search" placeholder="Find music here!"  class="form-control input" id="search" style="width: 50%;">
                     <button class="button is-black">Search</button>
                   </div>
                   <div class="form-group">
@@ -38,6 +38,7 @@
               </div>
           </div>
        </div>
+      </div> 
     </header>
       <main style="min-height: 660px;">
         
@@ -45,7 +46,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
-<footer class="footer" style="padding: 0%;" style="margin-top: 0px;">
+<footer class="footer" style="padding: 0%;"  style="margin-top: 0px;">
   <div class="field has-addons">
     <div class="control" style="width: 100%;">
         <div class="notification" style="background: url(./images/Musix.jpg) fixed center;">
