--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <strong style="color: purple;">Welcome to the Musix Lyrics! Please search up any lyrics, artists, or song titles you wish to find!</strong>
             <div class="field has-addons">
               <div class="control">
-                <form class="search-form js-search-form" onsubmit="return false">>
+                <form class="search-form" onsubmit="return false">
                   <div class="form-group" style="text-align: center;"> 
-                    <input type="search" placeholder="Find music here!" name="q" class="search-input js-search-input input" id="search" style="width: 50%;" autofocus>
+                    <input type="search" placeholder="Find music here!" name="q" class="search-input input" id="search" style="width: 50%;" autofocus>
                   </div>
                   <div class="form-group">
                     <input type="radio" name="search" value="artist" id="ArtistRadioButton" checked>Artist
@@ -36,8 +36,6 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div id="video">
-                      <div class="control">
-                      </div>
                     </div>
                   </div>
                </div>
@@ -46,7 +44,7 @@
        </div>
     </header>
       <main>
-        <section class="search-results js-search-results">
+        <section class="search-results">
           <div class="row">
             <table id="back-button" class="table results"></table>
         </div>
@@ -57,9 +55,7 @@
         </section>
         
       </main>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./assets/js/script.js"></script>
-</body>
+
 <footer class="footer" style="padding: 0%;" style="margin-top: 0px;">
   <div class="field has-addons">
     <div class="control" style="width: 100%;">
@@ -72,5 +68,8 @@
         </div>
     </div>
   </div>
-</footer>
+</footer>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+</body>
 </html>
