--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <div class="control">
                 <form onsubmit="return false">
                   <div class="form-group"> 
-                    <input type="search" placeholder="Find music here!" name="q" class="search-input input" id="search" autofocus>
+                    <input type="search" placeholder="Find music here!" name="q" class="search-input input" id="search">
                   </div>
                   <div class="form-group">
                     <input type="radio" name="search" value="artist" id="ArtistRadioButton" checked>Artist
